Fixed alignment issue with matches on button presses

--- a/src/styles/match.scss
+++ b/src/styles/match.scss
@@ -27,3 +27,7 @@
     justify-content: flex-start;
     align-items: center;
 }
+
+.button {
+    margin: 1rem 0.5rem;
+}
